--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title>React Simple Pagination Component</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" />
 </head>
 <body>
     <noscript>
